--- a/index.html
+++ b/index.html
@@ -347,6 +347,32 @@ button:hover {
         <!-- Botão para Visualizar o Projeto -->
         <a href="/PARA UM PORTIFOLIO/noticia-pro/index.html" class="mt-4 inline-block px-6 py-2 bg-yellow-500 text-white rounded-full hover:bg-yellow-400">Visualizar Projeto</a>
       </div>
+      <!-- RESTAURANTE-->
+      <div class="project-card bg-white shadow-lg p-4 rounded-lg">
+        <div class="slider-container relative">
+          <!-- Slider para o Card -->
+          <div class="slider-images flex transition-transform duration-300 ease-in-out">
+            <div class="slide w-full">
+              <img src="/IMG/cul.png" alt="Projeto 1" class="w-full h-48 object-cover rounded-lg">
+            </div>
+            <div class="slide w-full">
+              <img src="/IMG/culi1.png" alt="Projeto 2" class="w-full h-48 object-cover rounded-lg">
+            </div>
+            <div class="slide w-full">
+              <img src="/IMG/agro3.png" alt="Projeto 3" class="w-full h-48 object-cover rounded-lg">
+            </div>
+          </div>
+
+          <!-- Indicadores de navegação -->
+          <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
+            <span class="dot w-3 h-3 bg-gray-500 rounded-full cursor-pointer"></span>
+            <span class="dot w-3 h-3 bg-gray-500 rounded-full cursor-pointer"></span>
+            <span class="dot w-3 h-3 bg-gray-500 rounded-full cursor-pointer"></span>
+          </div>
+        </div>
+        <!-- Botão para Visualizar o Projeto -->
+        <a href="/PARA UM PORTIFOLIO/opacity/index.html" class="mt-4 inline-block px-6 py-2 bg-yellow-500 text-white rounded-full hover:bg-yellow-400">Visualizar Projeto</a>
+      </div>
     </div>
   </div>
 </section>
