--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfólio de arquitetura minimalista e sofisticado.">
-  <title>Portfólio de Arquitetura</title>
+  <title>Portfólio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -104,33 +104,33 @@ button:hover {
 <section id="home" class="relative h-screen bg-cover bg-center" style="background-image: url('/IMG/BL.jpg');">
   <!-- Cabeçalho dentro do Hero -->
   <header class="absolute top-0 left-0 w-full bg-transparent z-10">
-   <nav class="container mx-auto flex justify-between items-center py-6 transition-all duration-500 ease-in-out">
-  <a href="/" class="font-bold text-2xl text-white"></a>
-  <ul class="hidden lg:flex space-x-6"> <!-- Exibe somente em telas grandes -->
-    <li><a href="#home" class="nav-link text-white hover:text-yellow-500">Início</a></li>
-    <li><a href="#projetos" class="nav-link text-white hover:text-yellow-500">Projetos</a></li>
-    <li><a href="#sobre" class="nav-link text-white hover:text-yellow-500">Sobre</a></li>
-    <li><a href="#contato" class="nav-link text-white hover:text-yellow-500">Contato</a></li>
-  </ul>
-  <ul class="lg:hidden flex space-x-6"> <!-- Exibe somente em telas pequenas -->
-    <li><a href="#home" class="nav-link text-white hover:text-yellow-500">Início</a></li>
-    <li><a href="#projetos" class="nav-link text-white hover:text-yellow-500">Projetos</a></li>
-    <li><a href="#contato" class="nav-link text-white hover:text-yellow-500">Contato</a></li>
-  </ul>
-</nav>
-
+    <nav class="container mx-auto flex justify-between items-center py-6 transition-all duration-500 ease-in-out">
+      <a href="/" class="font-bold text-2xl text-white"></a>
+      <ul class="hidden lg:flex space-x-6"> <!-- Exibe somente em telas grandes -->
+        <li><a href="#home" class="nav-link text-white hover:text-yellow-500">Início</a></li>
+        <li><a href="#projetos" class="nav-link text-white hover:text-yellow-500">Projetos</a></li>
+        <li><a href="#sobre" class="nav-link text-white hover:text-yellow-500">Sobre</a></li>
+        <li><a href="#contato" class="nav-link text-white hover:text-yellow-500">Contato</a></li>
+      </ul>
+      <ul class="lg:hidden flex space-x-6"> <!-- Exibe somente em telas pequenas -->
+        <li><a href="#home" class="nav-link text-white hover:text-yellow-500">Início</a></li>
+        <li><a href="#projetos" class="nav-link text-white hover:text-yellow-500">Projetos</a></li>
+        <li><a href="#contato" class="nav-link text-white hover:text-yellow-500">Contato</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Overlay para escurecer a imagem -->
-  <div class="absolute inset-0 bg-black opacity-50"></div>
+  <div class="absolute inset-0 bg-black opacity-50 z-0"></div>
 
   <!-- Conteúdo do Hero -->
   <div class="container mx-auto h-full flex items-center justify-center text-center text-white z-20">
-    <p class="mt-4 text-lg" style="font-family: 'Playfair Display', serif;" >
-  Na Arquitetura Essencial, acreditamos que cada linha traçada deve refletir identidade, funcionalidade e beleza atemporal. Transformamos ideias em experiências espaciais únicas.
-</p>
+    <p class="mt-4 text-lg custom-text z-30">
+      Desenvolvedor Front-End com experiência em HTML, CSS, JavaScript (React, Vue.js ou Angular) e conhecimentos em PHP para tarefas simples de back-end. O candidato ideal será responsável por criar interfaces responsivas e integrar o front-end com APIs, além de realizar ajustes no back-end quando necessário.
+    </p>
   </div>
 </section>
+
 
 
   <!-- Projetos Section -->
